@@ -1,5 +1,9 @@
 2007-06-15  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* TabControlTest.cs: Expanded GetContainerForItemOverride test, added Focusable and following tests.
+
+2007-06-15  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* TabItemTest.cs: Added IsSelected and following tests.
 
 2007-06-14  George Giolfan  <georgegiolfan@yahoo.com>
